--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -48,6 +48,8 @@
       <a href="/sales">Sales</a>
       <a href="/customers">Customers</a>
       <a href="/employees">Employees</a>
+      <a href="/suppliers">Suppliers</a>
+      <a href="/analytics">Analytics</a>
     </nav>
   </header>
 
